--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AndreaMettaWijaya</string>
     <string name="search">Search</string>
+    <string name="retry">Retry</string>
+    <string name="no_internet">No Internet Connection</string>
 </resources>
